samples/_failures_safe/1761041868_ee3494_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b852c5eb.c: In function ‘main’:
./samples/SAFE/__tmp_b852c5eb.c:135:80: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  135 |         printf("Compression ratio: %.2f%%\n", (1.0 - (double)output_buf.size / input
      |                                                                                ^~~~~
      |                                                                                int
./samples/SAFE/__tmp_b852c5eb.c:135:80: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b852c5eb.c:135:85: error: expected ‘)’ at end of input
  135 |         printf("Compression ratio: %.2f%%\n", (1.0 - (double)output_buf.size / input
      |                                               ~                                     ^
      |                                                                                     )
./samples/SAFE/__tmp_b852c5eb.c:135:9: error: expected declaration or statement at end of input
  135 |         printf("Compression ratio: %.2f%%\n", (1.0 - (double)output_buf.size / input
      |         ^~~~~~
./samples/SAFE/__tmp_b852c5eb.c:135:9: error: expected declaration or statement at end of input
